--- a/LeetCode_Easy/LeetCode_Easy.vcxproj.filters
+++ b/LeetCode_Easy/LeetCode_Easy.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="removeElement.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="implementStrStr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
