--- a/LeetCode_Easy/LeetCode_Easy.vcxproj
+++ b/LeetCode_Easy/LeetCode_Easy.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="removeElement.cpp" />
     <ClCompile Include="reverseInteger.cpp" />
     <ClCompile Include="romanToInteger.cpp" />
+    <ClCompile Include="searchInsert.cpp" />
     <ClCompile Include="twoSum.cpp" />
     <ClCompile Include="validParantheses.cpp" />
   </ItemGroup>
